edit padding for nav__link

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -21,6 +21,7 @@
     text-transform: uppercase;
     text-align: center;
     display: block;
+    padding: 1.5rem;
     transition: all 0.2s;
   }
 
